# GreenGaming-DoomLegacy

./: README.md
DoomLegacy_EC_GA/: create_file_all_c_bc.py  notas_Josemi.txt  notas_benchmarks.txt  pc_launch.py  remoteBashSSH.sh  save_and_fix_multiple_definitions_v4_7.py
DoomLegacy_EC_GA/EEMBC_benchmark_suites/: README.txt  compile_all_v3_2.py
DoomLegacy_EC_GA/EEMBC_benchmark_suites_redefinido/: check.py
DoomLegacy_EC_GA/docs/: metodologia_uso_avanzado_medicion.txt
DoomLegacy_EC_GA/scriptsExperiPi/: iniciarServicios.sh  main_experipi.py  main_experipi_CEP.py  main_experipi_doom.py  tumba_espera_inicia_servicios.sh  tumbarServicios6.sh
DoomLegacy_EC_GA/scriptsMediPi/: IntervalUtilsV1.py  IntervalValueV1.py  LlvmUtilsV5.py  Measurer.py  benchmark_measurer.py  ejemplo_de_uso.py  genetico_ejecucion_suite_v1_3.py  genetico_ejecucion_suite_v1_3_no_experipi.py  ina219.py  launch_script.sh  llvmIntegerProblemV3doom.py  main_llvm_intengerV3.py  measure_basal.py  runtimesDoom.sh  tomaMuestrasBench.py  tomaMuestrasCEP.py  tomaMuestrasDoom.py  tomaMuestrasDoomSolution.py  tomaMuestrasEC.py
DoomLegacy_EC_GA/scriptsMediPi/common_files/: demo_lit.lmp
DoomLegacy_EC_GA/scriptsMediPi/common_files/wads/: demnsncry2.WAD  dogs.wad  legacy.wad
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/: CMakeLists.txt  Makefile  README  applyPasses.sh  applyPassesTime.sh  genBinary.sh  genGame.sh  make_options  make_options_mac  make_options_nix  make_options_os2  make_options_win
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/dep/: hard1.dep  hardgl.dep  main1.dep  main3.dep  main4.dep  main5.dep  main_d.dep  main_m.dep  main_p1.dep  main_p2.dep  main_p3.dep  main_ph.dep  main_r.dep  main_t.dep  sdl.dep
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/docs/: INSTALL.html  README_Compiling.txt  console.html  editing.html  faq.html  fsfuncs.html  index.html  legacy.html  source.html  whatsnew.html
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/logs/: WDJlog.txt
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/resources/: FS_things.h  VERSION.txt
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/scripts/: README.rst  release.sh
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/: Makefile  am_map.c  b_bot.h  b_game.c  b_game.h  b_look.c  b_node.c  b_node.h  b_search.c  command.c  command.h  console.c  d_clisrv.c  d_clisrv.h  d_event.h  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_think.h  d_ticcmd.h  dehacked.c  doomdata.h  doomdef.h  doomincl.h  doomstat.h  doomtype.h  f_finale.c  g_game.c  g_game.h  g_input.c  g_input.h  hu_stuff.c  hu_stuff.h  i_net.h  (+96 more)
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/djgppdos/: I_net.c  I_sound.c  I_system.c  I_video.c  Vid_vesa.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/hardware/: hw_bsp.c  hw_cache.c  hw_data.h  hw_defs.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/hardware/r_d3d/: R_d3d.cpp
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/hardware/r_glide/: r_glide.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/hardware/r_opengl/: r_opengl.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/linux_x/: endtxt.c  i_cdmus.c  i_sound.c  i_system.c  i_video_3dfx.c  i_video_ggi.c  i_video_xshm.c  lx_ctrl.h  snd_driver.c  snd_driver.h
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/linux_x/musserv/: Makefile  musseq.h  musserver.c  musserver.h  playmus.c  readwad.c  sequencer.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/linux_x/sndserv/: Makefile  linux.c  soundsrv.c  soundsrv.h
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/macos/: i_sound.c  i_system.c  i_video_mac.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/os2/: I_sound.c  I_system.c  I_video.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/sdl/: dosstr.c  endtxt.c  hwsym_sdl.c  i_cdmus.c  i_main.c  i_sound.c  i_system.c  i_video.c  ogl_sdl.c  ogl_sdl.h
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/src/win32/: mid2strm.h  win_main.c  win_snd.c  win_sys.c  win_vid.c
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/tools/: Makefile  wadtool.cc
DoomLegacy_EC_GA/scriptsMediPi/doomlegacy_source/x11/: make_options  make_options_nix
DoomLegacy_EC_GA/scriptsMediPi/jmetal/algorithm/multiobjective/: nsgaii.py
DoomLegacy_EC_GA/scriptsMediPi/jmetal/algorithm/singleobjective/: __init__.py  cellular_genetic_algorithm.py  genetic_algorithm.py
DoomLegacy_EC_GA/scriptsMediPi/jmetal/operator/: crossover.py  mutation.py
results/: NPSKClustering.r  ec_measurements_df.csv  ec_measurements_df_large.csv  plot_compare_boxplots.py  plot_compare_boxplots_large.py  solutions_ec_fitness_-O0_doomlegacy.csv  solutions_ec_fitness_-O0_doomlegacy_large.csv  solutions_ec_fitness_-O1_doomlegacy.csv  solutions_ec_fitness_-O2_doomlegacy.csv  solutions_ec_fitness_-O3_doomlegacy.csv  solutions_ec_fitness_-Os_doomlegacy.csv  solutions_ec_fitness_-Oz_doomlegacy.csv  solutions_ec_fitness_ga_doom_doomlegacy.csv  solutions_ec_fitness_ga_doom_doomlegacy_large.csv
